@@ -1,3 +1,7 @@
+Alpha 6.1.6 - 23rd August 2021
+
+- Fixed an issue when displayed a settler with some needs missing 
+
 Alpha 6.1.5 - 21st August 2021
 
 - Fix for a rare crash for when furniture is damaged
